--- a/package.json
+++ b/package.json
@@ -21,9 +21,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^28.1.8",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/react-select": "^5.0.1",
+    "@types/testing-library__react": "^10.2.0",
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
@@ -31,7 +35,9 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
+    "jest": "^28.1.3",
     "rollup": "^4.22.5",
+    "ts-jest": "^28.0.8",
     "ts-node": "^10.9.2",
     "vite": "^5.4.1",
     "vite-plugin-singlefile": "^2.0.2",
