処理高速化のため分割

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "gapi-script": "^1.2.0",
     "jaconv": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
