--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jaconv": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.2",
     "typescript": "^4.9.5"
