コードをまとめた（あとは削除）

--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "gapi-script": "^1.2.0",
+    "goober": "^2.1.16",
     "jaconv": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^6.1.6",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.2",
+    "react-spinners": "^0.15.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
