--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^7.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.2",
     "react-spinners": "^0.15.0",
